--- a/assets/css/3-modules/_projects.sass
+++ b/assets/css/3-modules/_projects.sass
@@ -1,19 +1,18 @@
-.portfolio
-	h1
-		font-size: 1.2em
-		color: $muted-text
-		letter-spacing: 3px
-		text-transform: uppercase
-		margin-top: 50px
+h1.my-projects
+	font-size: 1.2em
+	color: $muted-text
+	letter-spacing: 3px
+	text-transform: uppercase
+	margin-top: 50px
 
+.portfolio
 	.project-single
 		margin-bottom: 80px
 		+clearfix
 
-		h2 
-			margin-bottom: 0
-
 	.project-meta
+		margin-top: -35px
+		
 		ul 
 			list-style-type: none
 			padding: 0
@@ -72,3 +71,8 @@
 			
 			i 
 				margin-right: 5px
+	
+	.img-grid
+		img
+			max-width: 100%
+			margin-bottom: 10px
